sample/projectFolder/objects/Apps_detail__b.object
<CustomObject>
    <fields>
        <fullName>app_category__c</fullName>
        <label>app_category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>app_id__c</fullName>
        <description>This id is the same with the id of App Annie</description>
        <label>app_id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>app_name__c</fullName>
        <label>app_name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_download__c</fullName>
        <label>current_download</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>previous_week_download__c</fullName>
        <label>previous_week_download</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>previous_week_revenue__c</fullName>
        <label>previous_week_revenue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>release_date__c</fullName>
        <label>release_date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>Id</fullName>
        <fields>
            <name>app_id__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>Id</label>
    </indexes>
    <label>Apps_detail</label>
    <pluralLabel>Apps_details</pluralLabel>
</CustomObject>